--- a/backend/package.json
+++ b/backend/package.json
@@ -20,10 +20,13 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "celebrate": "^15.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-winston": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.3",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "winston": "^3.13.1"
   }
 }
